--- a/.gitignore
+++ b/.gitignore
@@ -1,13 +1,12 @@
-.vercel
+# .gitignore
+
+
+.vercel/
 *.log
 *.pyc
 __pycache__
 
-# Environments 
-.env 
+# Environments
+
 .venv 
-env/ 
 venv/ 
-ENV/ 
-env.bak/ 
-venv.bak/ 
